# smbios

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: smbios-config.cmake.in
src/: bios_streambuf.cpp  bios_streambuf.hpp  smbios.cpp  smbios.hpp  smbios_parser.cpp  smbios_parser.hpp
